<resources>
    <string name="app_name">Findact</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_find">Find</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_display_activity">Activities</string>
    <string name="google_maps_key" translatable="false">AIzaSyDMvoXuddS7s5f6h2QZwEYCGdkdMudzI5s</string>
    <string name="activity_create_image_location">Select Image and Location</string>
    <string name="activity_create_invite">Invite</string>
    <string name="activity_create_date_hint">Date</string>
    <string name="activity_create_select_category">Select Category</string>
    <string name="activity_create_sub_category">Select Subcategories</string>
    <string name="activity_create_description_hint">Description</string>
    <string name="activity_create_name_hint">Activity Name</string>
    <string name="toast_fill_blanks">Please fill the blanks.</string>
    <string name="attendees">Attendees</string>
    <string name="display_game_release_date">"Release Date: "</string>
    <string name="display_game_rating">"Rating: "</string>
    <string name="display_game_popularity">"Popularity: "</string>
    <string name="display_game_platforms">Platforms</string>
    <string name="display_game_genres">Genres</string>
    <string name="display_game_modes">Game Modes</string>
    <string name="display_game_overview">Overview</string>
    <string name="display_trailer">"Trailer: "</string>
    <string name="display_activity_date">Date:</string>
    <string name="display_activity_category">Category:</string>
    <string name="display_activity_subcategories">Genres</string>
    <string name="display_activity_description">Description</string>
    <string name="display_movie_release_date">Release Date:</string>
    <string name="display_movie_language">"Language: "</string>
    <string name="display_movie_rating">Rating:</string>
    <string name="display_movie_trailer">Trailer:</string>
    <string name="display_movie_genres">Genres</string>
    <string name="display_movie_overview">Overview</string>
    <string name="find_fragment_search_hint">Search</string>
    <string name="find_fragment_person">Person</string>
    <string name="find_fragment_movie">Movie</string>
    <string name="find_fragment_game">Game</string>
    <string name="find_fragment_activity">Aktivity</string>
    <string name="create_activity_select_picture">Select Your Profile Picture</string>
    <string name="create_activity_firstname_hint">Firstname</string>
    <string name="create_activity_lastname_hint">Lastname</string>
    <string name="create_activity_birthday_hint">Birthday</string>
    <string name="create_activity_game_genres">Game Genres</string>
    <string name="create_activity_movie_genres">Movie Genres</string>
    <string name="create_activity_select_genres">Select Interested Genres</string>
    <string name="toast_check_internet_connection">Check your internet connection.</string>
    <string name="toast_welcome">Welcome:</string>
    <string name="toast_tap_twice_to_exit">Tap twice to exit.</string>
    <string name="profile_fragment_following">Following</string>
    <string name="profile_fragment_followers">Followers</string>
    <string name="profile_fragment_requests">Requests</string>
    <string name="profile_fragment_menu_edit_profile">Edit Profile</string>
    <string name="profile_fragment_menu_settings">Settings</string>
    <string name="profile_fragment_menu_logout">Logout</string>
    <string name="list_item_homepage_date">Date:</string>
    <string name="list_item_homepage_rating">Rating:</string>
    <string name="list_item_homepage_category">Category:</string>
    <string name="list_item_homepage_share_info1">" shared a "</string>
    <string name="list_item_homepage_share_info2"></string>

</resources>
