<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_explore"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/search"
        android:title="@string/title_find"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_profile"
        android:title="@string/title_profile"
        app:showAsAction="always" />

</menu>
