<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity"
    >

    <EditText
        android:id="@+id/activity_create_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/activity_create_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/activity_create_save_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_create_save_iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_create_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_create_name_et"
        app:srcCompat="@drawable/circle_done" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activity_create_image_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_name_et" />

    <LinearLayout
        android:id="@+id/activity_create_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/activity_create_select_image_iv"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/default_group" />

        <fragment
            android:id="@+id/activity_create_mv"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_ll">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/activity_create_date_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/activity_create_date_hint"
                    android:inputType="none" />

                <Button
                    android:id="@+id/activity_create_invite_tv"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_create_invite"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_select_category"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <Spinner
                android:id="@+id/activity_create_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:dropDownWidth="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:minHeight="40dp" />

            <TextView
                android:id="@+id/activity_create_subcategory_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_sub_category"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />


            <GridLayout
                android:id="@+id/activity_create_gl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

            </GridLayout>


            <EditText
                android:id="@+id/activity_create_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/activity_create_description_hint"
                android:inputType="textMultiLine" />

        </LinearLayout>

    </ScrollView>

    </android.support.constraint.ConstraintLayout>
